chore(compiler): Migrate to Kotlin compiler 2.3.21
Signed-off-by: invokevirtual <purwarpranav80@gmail.com>