@@ -1,5 +1,6 @@
 plugins {
     id("java-library")
+    id("org.jetbrains.kotlin.jvm")
 }
 
 java {
@@ -17,8 +18,20 @@ tasks.withType<JavaCompile> {
             "--add-exports",
             "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
             "--add-exports",
-            "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+            "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports",
+            "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
         )
+    )
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs(
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
     )
 }
 
